--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,15 @@
   font-weight: 500;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Sentient';
+  src: url('/fonts/Sentient-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+
 body {
   margin: 0;
   padding: 0;
